--- a/src/pug/pages/404.pug
+++ b/src/pug/pages/404.pug
@@ -20,5 +20,5 @@ block content
 					a.link(href="") Услуги
 					a.link(href="") Обращения
 					a.link(href="") Корзина
-
+block variables
 	-var title = "Упс...!";
