--- a/src/pug/pages/authorization-finish.pug
+++ b/src/pug/pages/authorization-finish.pug
@@ -17,10 +17,8 @@ block content
 					.form-item
 						input.inp(type="text" name="name" )
 					
-					
-					
 				.form-button
 					button.btn-primary(type="submit") Зарегистрироваться
 						 
-	
+block variables
 	-var title = "Авторизация";
