--- a/src/pug/pages/authorization.pug
+++ b/src/pug/pages/authorization.pug
@@ -31,5 +31,5 @@ block content
 				.form-button
 					button.btn-primary.disabled(type="submit") Продолжить
 						 
-	
+block variables
 	-var title = "Авторизация";
