--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,7 +4,7 @@ block content
 	.start-page(style="background: white;")
 		h1 Кадастр Всем
 		.start-page__cards
-			a(href="./ui/colors.html") UI-KIT
+			a(href="#!") UI-KIT
 			a(href="./authorization.html") Авторизация-стартовая
 			a(href="./sms-code.html") Код смс
 			a(href="./authorization-finish.html") Завершить авторизацию
@@ -16,6 +16,7 @@ block content
 			a(href="./history-page-admin.html") История обращений-Admin
 			a(href="./bid-page-customer.html") Заявка- Пользователь
 			a(href="./bid-page-admin.html") Заявка- Admin
+			a(href="./order-place.html") Оформление заказа
 			a(href="./404.html") 404
 
 			
@@ -24,5 +25,5 @@ block content
 			
 		
 			
-			
+block variables
 	-var title = "Оформление";
