--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -26,7 +26,7 @@ block content
 						span Акция!
 					p.fs-16 Только до конца декабря 2025 года при заказе технического плана, консультация специалиста в подарок
 					
-					a.link-border.fs-13(href="#!") подробнее »
+					a.link-border.fs-13(href="#!") подробнее&nbsp;»
 
 			.our-services-list
 				+service-item('consultation', 'Консультация по документам', 'Профессиональная консультация кадастрового инженера по документам на недвижимость')
@@ -101,5 +101,5 @@ block content
 								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
 			
 	include ../sections/_footer-menu
-	
+block variables
 	-var title = "Главная";
