--- a/src/pug/pages/services.pug
+++ b/src/pug/pages/services.pug
@@ -1,35 +1,35 @@
 extends ../layouts/layout.pug
 
 block content
-	
-	header.header.header-primary
-		.container
-			
-			a.logo-group(href="index.html")
-				svg.svg-logo-icon
-					use(href='./img/sprite.svg#svg-logo-icon')
-				svg.svg-logo-txt
-					use(href='./img/sprite.svg#svg-logo-txt')
-
-			.header-title
-				.h-18 Услуги
-	main.main-inner
-		section.services
+	.page-content
+		header.header.header-primary
 			.container
-				+service-card('consultation', 'Консультация по&nbsp;документам', 'Профессиональная консультация кадастрового инженера по документам на недвижимость')
-				+service-card('tool', 'Выезд на объект', 'Выезд специалистов на ваш земельный участок или объект недвижимости для проведения геодезических работ', '(определение координат/вынос координат)')
-				+service-card('technical-plan', 'Технический план', 'представляет собой документ, в котором указаны сведения о здании, сооружении, помещении,  машино-месте и т.д.')
-				+service-card('tehnical-passport', 'Технический паспорт', 'Является основным документом технического учета, формируемым по результатам технической инвентаризации объекта недвижимости', '(для ресурсоснабжающих организаций)')
-				+service-card('boundary-plan', 'Межевой план', 'Нужен для кадастрового учёта земельного участка, в том числе при изменении описания его местоположения и площади, а также уточнении границ')
-				+service-card('survey-report', 'Акт обследования', 'Документ, позволяющий снять объект с учета, ранее занесенный в Государственный реестр недвижимости', '(снятие с учета)')
-				+service-card('scheme', 'Схема земельного участка&nbsp;на&nbsp;КПТ', 'Сформируйте схему. Землю больше не производят! Вам нужна схема земельного участка на кадастровом плане территории!')
-				+service-card('online', 'Электронная регистрация&nbsp;прав', 'Услуга, позволяющая подать документы в Росреестр в дистанционном формате, не выходя из дома')
-				+service-card('digital-signature', 'Выпуск ЭЦП', 'Для всех заинтересованных сторон в офисе компании или у вас')
-				+service-card('question', 'Только спросить')
 				
-				
+				a.logo-group(href="index.html")
+					svg.svg-logo-icon
+						use(href='./img/sprite.svg#svg-logo-icon')
+					svg.svg-logo-txt
+						use(href='./img/sprite.svg#svg-logo-txt')
 
-		
-	include ../sections/_footer-menu
-	
+				.header-title
+					.h-18 Услуги
+		main.main-inner
+			section.services.pb-20
+				.container
+					+service-card('consultation', 'Консультация по&nbsp;документам', 'Профессиональная консультация кадастрового инженера по документам на недвижимость')
+					+service-card('tool', 'Выезд на объект', 'Выезд специалистов на ваш земельный участок или объект недвижимости для проведения геодезических работ', '(определение координат/вынос координат)')
+					+service-card('technical-plan', 'Технический план', 'представляет собой документ, в котором указаны сведения о здании, сооружении, помещении,  машино-месте и т.д.')
+					+service-card('tehnical-passport', 'Технический паспорт', 'Является основным документом технического учета, формируемым по результатам технической инвентаризации объекта недвижимости', '(для ресурсоснабжающих организаций)')
+					+service-card('boundary-plan', 'Межевой план', 'Нужен для кадастрового учёта земельного участка, в том числе при изменении описания его местоположения и площади, а также уточнении границ')
+					+service-card('survey-report', 'Акт обследования', 'Документ, позволяющий снять объект с учета, ранее занесенный в Государственный реестр недвижимости', '(снятие с учета)')
+					+service-card('scheme', 'Схема земельного участка&nbsp;на&nbsp;КПТ', 'Сформируйте схему. Землю больше не производят! Вам нужна схема земельного участка на кадастровом плане территории!')
+					+service-card('online', 'Электронная регистрация&nbsp;прав', 'Услуга, позволяющая подать документы в Росреестр в дистанционном формате, не выходя из дома')
+					+service-card('digital-signature', 'Выпуск ЭЦП', 'Для всех заинтересованных сторон в офисе компании или у вас')
+					+service-card('question', 'Только спросить')
+					
+					
+
+			
+		include ../sections/_footer-menu
+block variables
 	-var title = "Услуги";
