--- a/src/pug/pages/sms-code.pug
+++ b/src/pug/pages/sms-code.pug
@@ -28,7 +28,6 @@ block content
 					.form-text-row
 						p.fs-16 Получить новый код можно через #[span 0:59]
 						a.fs-16.link(href="#!") Получить новый код
-				
 						 
-	
+block variables	
 	-var title = "Авторизация";
