--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -53,7 +53,7 @@ html(lang="ru")
 					.inp-placeholder Имя *
 				
 				pre.
-					.form-item.form-item--focus
+					.form-item.form-item--special
 						input.inp(type="text" name="inp_name")
 						.inp-placeholder Имя *
 				
@@ -62,7 +62,7 @@ html(lang="ru")
 					.inp-placeholder Message
 				
 				pre.
-					.form-item.form-item--focus
+					.form-item.form-item--special
 						input.inp(type="text" name="inp_name")
 						.inp-placeholder Имя *
 
