--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -54,7 +54,9 @@
 }
 .txt-muted,.muted-15{color: var(--vtorostepennyy-tekst);}
 .mb-25{margin-bottom: 25px;}
+.mt-20{margin-top: 25px;}
 .mb-0{margin-bottom: 0!important;}
+.pb-20{padding-bottom: 20px;}
 .border-bot{
 	border-bottom:1px solid #EBEDF5;
 }
