--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,8 +21,9 @@
 @use "sections/_basket-page";
 @use "sections/_history";
 @use "sections/_bid-page";
-// @use "sections/_bid-customer";
+
 @use "sections/_contacts-customer";
+@use "sections/_order-place";
 @use "sections/_page-404";
 
 
