--- a/src/pug/pages/history-page.pug
+++ b/src/pug/pages/history-page.pug
@@ -1,77 +1,77 @@
 extends ../layouts/layout.pug
 
 block content
-	
-	header.header.header-primary
-		.container
-			a.logo-group(href="index.html")
-				svg.svg-logo-icon
-					use(href='./img/sprite.svg#svg-logo-icon')
-				svg.svg-logo-txt
-					use(href='./img/sprite.svg#svg-logo-txt')
-
-			.header-title
-				.h-18 История обращений
-				
-	main.main-inner
-		section.history-content
+	.page-content
+		header.header.header-primary
 			.container
-				.search-wrapper
-					form(action="" method="method" placeholder="Поиск")
-						.form-item-slim
-							input.inp(type="text" name="inp_name")
-							button.search-button(type="submit")
-				.history-list
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 01.12.2025
-								.fs-16 #[span.txt-muted #] 123456789
-							.label.label-light В обработке
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 11.11.2025
-								.fs-16 #[span.txt-muted #] 987654321
-							.label.label-inter Выезд на объект
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 05.08.2025
-								.fs-16 #[span.txt-muted #] 456456
-							.label.label-inter Согласование
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 07.03.2025
-								.fs-16 #[span.txt-muted #] 7867567
-							.label.label-inter Формирование документов
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 07.03.2025
-								.fs-16 #[span.txt-muted #] 345345356
-							.label.label-inter Подача в&nbsp;Росреестр
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 01.03.2025
-								.fs-16 #[span.txt-muted #] 67854
-							.label.label-done Закрытие
-					//single
-					.history-item
-						.history-item__head
-							.history-item__info
-								.fs-13.txt-muted 01.03.2025
-								.fs-16 #[span.txt-muted #] 67854
-							.label.label-failure Отказ
+				a.logo-group(href="index.html")
+					svg.svg-logo-icon
+						use(href='./img/sprite.svg#svg-logo-icon')
+					svg.svg-logo-txt
+						use(href='./img/sprite.svg#svg-logo-txt')
 
-	include ../sections/_footer-menu
-	
+				.header-title
+					.h-18 История обращений
+					
+		main.main-inner
+			section.history-content
+				.container
+					.search-wrapper
+						form(action="" method="method" placeholder="Поиск")
+							.form-item-slim
+								input.inp(type="text" name="inp_name")
+								button.search-button(type="submit")
+					.history-list
+						//single
+						.history-item
+							.history-item__head
+								.history-item__info
+									.fs-13.txt-muted 01.12.2025
+									.fs-16 #[span.txt-muted #] 123456789
+								.label.label-light В обработке
+						//single
+						.history-item
+							.history-item__head
+								.history-item__info
+									.fs-13.txt-muted 11.11.2025
+									.fs-16 #[span.txt-muted #] 987654321
+								.label.label-inter Выезд на объект
+						//single
+						.history-item
+							.history-item__head
+								.history-item__info
+									.fs-13.txt-muted 05.08.2025
+									.fs-16 #[span.txt-muted #] 456456
+								.label.label-inter Согласование
+						//single
+						.history-item
+							.history-item__head
+								.history-item__info
+									.fs-13.txt-muted 07.03.2025
+									.fs-16 #[span.txt-muted #] 7867567
+								.label.label-inter Формирование документов
+						//single
+						.history-item
+							.history-item__head
+								.history-item__info
+									.fs-13.txt-muted 07.03.2025
+									.fs-16 #[span.txt-muted #] 345345356
+								.label.label-inter Подача в&nbsp;Росреестр
+						//single
+						.history-item
+							.history-item__head
+								.history-item__info
+									.fs-13.txt-muted 01.03.2025
+									.fs-16 #[span.txt-muted #] 67854
+								.label.label-done Закрытие
+						//single
+						.history-item
+							.history-item__head
+								.history-item__info
+									.fs-13.txt-muted 01.03.2025
+									.fs-16 #[span.txt-muted #] 67854
+								.label.label-failure Отказ
+
+		include ../sections/_footer-menu
+block variables
 	-var title = "Одна услуга";
