--- a/src/scss/sections/_basket-page.scss
+++ b/src/scss/sections/_basket-page.scss
@@ -6,7 +6,7 @@
 .basket-card{
 	padding-block:20px;
 	border-bottom:1px solid #EBEDF5;
-	&>.fs-15{margin-bottom: 7px;}
+	.basket-card-body .txt-muted.fs-15{margin-bottom: 7px;}
 	.basket-card-body,.basket-card-addition>*+*{margin-top: 11px;}
 	.basket-card-body .price-item{font-weight: 600;}
 }
@@ -14,4 +14,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	flex-grow: 1;
+	&>.container{flex-grow: 1;}
 }
