--- a/src/pug/pages/history-page-admin.pug
+++ b/src/pug/pages/history-page-admin.pug
@@ -21,7 +21,7 @@ block content
 					.bid-header.border-bot
 						.fs-15.date-box 01.12.2025
 						.bid-state-block
-							.label-light В обработке 
+							.label.label-light В обработке 
 
 					.bid-content.gap-15.border-bot
 						h2.h2 Услуги
