--- a/src/scss/sections/_history.scss
+++ b/src/scss/sections/_history.scss
@@ -33,6 +33,7 @@
 	color: var(--zagolovok);
 	svg{margin-left: auto;transition: .2s; }
 }
+.label-light{background: #EEF1FE;}
 .label-inter{background: #e3e8ff;}
 .label-done{background: #e0f0e4;}
 .label-failure{background: #ffe0e0;}
