--- a/src/pug/pages/bid-page-admin.pug
+++ b/src/pug/pages/bid-page-admin.pug
@@ -17,7 +17,7 @@ block content
 			section.bid-content
 				.container
 					.bid-header.border-bot
-						.fs-15.date-box 01.12.2025
+						.fs-15.date-box 05.12.2025
 						.bid-state-block
 							.label.label-light#open-states-list
 								span В обработке
@@ -33,6 +33,11 @@ block content
 									li.drop-list-item Подача в Росреестр
 									li.drop-list-item Закрытие
 									li.drop-list-item Отказ
+					
+					.customer-data.fs-15
+						.customer-name Александр Иванов
+						.customer-phone +7 (123) 123-45-67
+					
 					//bid list
 					.bid-content.gap-15.border-bot
 						h2.h2 Услуги
