--- a/src/pug/pages/bid-page-admin.pug
+++ b/src/pug/pages/bid-page-admin.pug
@@ -34,9 +34,11 @@ block content
 									li.drop-list-item Закрытие
 									li.drop-list-item Отказ
 					
-					.customer-data.fs-15
-						.customer-name Александр Иванов
-						.customer-phone +7 (123) 123-45-67
+					.customer-data-wrapper
+						.customer-data.fs-15
+							.customer-name Александр Иванов
+							.customer-phone +7 (123) 123-45-67
+						
 					
 					//bid list
 					.bid-content.gap-15.border-bot
