--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,7 +13,7 @@ block content
 			a(href="./single-service.html") Об услуге
 			a(href="./basket-page.html") Корзина
 			a(href="./history-page.html") История обращений- Пользователь
-			a(href="./history-page-admin.html") История обращений-Admin
+			a(href="./history-page-admin-fix.html") История обращений-Admin
 			a(href="./bid-page-customer.html") Заявка- Пользователь
 			a(href="./bid-page-admin.html") Заявка- Admin
 			a(href="./order-place.html") Оформление заказа
