--- a/src/scss/sections/_page-404.scss
+++ b/src/scss/sections/_page-404.scss
@@ -50,5 +50,5 @@
 }
  @media (-webkit-min-device-pixel-ratio: 2), 
 (min-resolution: 192dpi) {
-   .main-inner{background:url('../img/bg-404@2x.webp');}
+   .page-content-404 .main-inner{background:url('../img/bg-404@2x.webp');}
 }
